Leet code practice 6-12-2022

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ members = [
     "shuffle_the_array",
     "single_number",
     "subtract_the_product_and_sum_of_digits_of_an_integer",
+    "two_sum",
 ]
