More leet code practice on 6-13-2022

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ members = [
     "find_numbers_with_even_number_of_digits",
     "how_many_numbers_are_smaller_than_the_current_number",
     "longest_substring_without_repeating_characters",
+    "max_depth_of_binary_tree",
     "merge_intervals",
     "merge_two_sorted_lists",
     "palindrome_number",
+    "reverse_linked_list",
     "running_sum_of_1d_array",
     "shuffle_string",
     "shuffle_the_array",
